force-app/main/default/objects/Badge_Rule_Config__mdt/Badge_Rule_Config__mdt.object-meta.xml
<CustomObject>
    <label>Badge Rule Config</label>
    <pluralLabel>Badge Rule Configs</pluralLabel>
</CustomObject>