force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Badge_Code__c.field-meta.xml
<CustomField>
    <fullName>Badge_Code__c</fullName>
    <description>Badge code awarded by the gamification rule.</description>
    <label>Badge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>