force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <description>Badge name awarded by the gamification rule.</description>
    <label>Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>