force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Icon representing this badge.</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>