force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Name__c</fullName>
    <description>Metric evaluated by the badge rule.</description>
    <label>Metric Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>