force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Minimum_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Score__c</fullName>
    <description
  >Minimum partner performance score required for this tier badge.</description>
    <label>Minimum Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>