force-app/main/default/objects/Badge_Rule_Config__mdt/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>Threshold value required to earn the badge.</description>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>